--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.19.2",
     "create-react-app": "^3.3.0",
     "express": "^4.17.1",
+    "google-map-react": "^1.1.5",
     "nodemon": "^2.0.2",
     "react-scripts": "^3.3.1"
   },
